<resources>
    <string name="app_name">appPrueba</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="reset">Reset</string>
    <string name="contador">Contador: 0</string>
    <string name="calculator">Tu Calculadora</string>
    <string name="cuenta">0</string>
    <string name="cuenta2">0</string>
    <string name="all">Cuenta:</string>
    <string name="simbol">Elija</string>
    <string name="line">_____________________________</string>
    <string name="result">Result: null</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="borrar">↩</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eigth">8</string>
    <string name="nine">9</string>
    <string name="div">/</string>
    <string name="mult">*</string>
    <string name="equal">=</string>

</resources>